--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -19,6 +19,10 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  /* 全局主色调 */
+  --el-color-primary: rgba(186, 1, 36, 1);
+  /* --el-button-hover-link-text-color: rgba(186, 1, 36, 0.8); */
 }
 
 /* semantic color variables for this project */
