--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -22,6 +22,13 @@
 
   /* 全局主色调 */
   --el-color-primary: rgba(186, 1, 36, 1);
+
+  /* 一般用于hover状态 */
+  --el-color-primary-light-3: rgba(186, 1, 36, 0.7);
+  --el-color-primary-light-5: rgba(186, 1, 36, 0.5);
+  --el-color-primary-light-7: rgba(186, 1, 36, 0.3);
+  --el-color-primary-light-8: rgba(186, 1, 36, 0.2);
+  --el-color-primary-light-9: rgba(186, 1, 36, 0.1);
   /* --el-button-hover-link-text-color: rgba(186, 1, 36, 0.8); */
 }
 
